--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,208 @@
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-Light.eot');
+	src: local('Montserrat Light'), local('Montserrat-Light'),
+		url('./fonts/Montserrat-Light.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-Light.woff') format('woff'),
+		url('./fonts/Montserrat-Light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-MediumItalic.eot');
+	src: local('Montserrat Medium Italic'), local('Montserrat-MediumItalic'),
+		url('./fonts/Montserrat-MediumItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-MediumItalic.woff') format('woff'),
+		url('./fonts/Montserrat-MediumItalic.ttf') format('truetype');
+	font-weight: 500;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-Thin.eot');
+	src: local('Montserrat Thin'), local('Montserrat-Thin'),
+		url('./fonts/Montserrat-Thin.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-Thin.woff') format('woff'),
+		url('./fonts/Montserrat-Thin.ttf') format('truetype');
+	font-weight: 100;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-ExtraLightItalic.eot');
+	src: local('Montserrat ExtraLight Italic'), local('Montserrat-ExtraLightItalic'),
+		url('./fonts/Montserrat-ExtraLightItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-ExtraLightItalic.woff') format('woff'),
+		url('./fonts/Montserrat-ExtraLightItalic.ttf') format('truetype');
+	font-weight: 200;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-BoldItalic.eot');
+	src: local('Montserrat Bold Italic'), local('Montserrat-BoldItalic'),
+		url('./fonts/Montserrat-BoldItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-BoldItalic.woff') format('woff'),
+		url('./fonts/Montserrat-BoldItalic.ttf') format('truetype');
+	font-weight: bold;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-SemiBold.eot');
+	src: local('Montserrat SemiBold'), local('Montserrat-SemiBold'),
+		url('./fonts/Montserrat-SemiBold.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-SemiBold.woff') format('woff'),
+		url('./fonts/Montserrat-SemiBold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-ExtraLight.eot');
+	src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'),
+		url('./fonts/Montserrat-ExtraLight.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-ExtraLight.woff') format('woff'),
+		url('./fonts/Montserrat-ExtraLight.ttf') format('truetype');
+	font-weight: 200;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-ExtraBoldItalic.eot');
+	src: local('Montserrat ExtraBold Italic'), local('Montserrat-ExtraBoldItalic'),
+		url('./fonts/Montserrat-ExtraBoldItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-ExtraBoldItalic.woff') format('woff'),
+		url('./fonts/Montserrat-ExtraBoldItalic.ttf') format('truetype');
+	font-weight: 800;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-Italic.eot');
+	src: local('Montserrat Italic'), local('Montserrat-Italic'),
+		url('./fonts/Montserrat-Italic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-Italic.woff') format('woff'),
+		url('./fonts/Montserrat-Italic.ttf') format('truetype');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-Bold.eot');
+	src: local('Montserrat Bold'), local('Montserrat-Bold'),
+		url('./fonts/Montserrat-Bold.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-Bold.woff') format('woff'),
+		url('./fonts/Montserrat-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-LightItalic.eot');
+	src: local('Montserrat Light Italic'), local('Montserrat-LightItalic'),
+		url('./fonts/Montserrat-LightItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-LightItalic.woff') format('woff'),
+		url('./fonts/Montserrat-LightItalic.ttf') format('truetype');
+	font-weight: 300;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-BlackItalic.eot');
+	src: local('Montserrat Black Italic'), local('Montserrat-BlackItalic'),
+		url('./fonts/Montserrat-BlackItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-BlackItalic.woff') format('woff'),
+		url('./fonts/Montserrat-BlackItalic.ttf') format('truetype');
+	font-weight: 900;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-SemiBoldItalic.eot');
+	src: local('Montserrat SemiBold Italic'), local('Montserrat-SemiBoldItalic'),
+		url('./fonts/Montserrat-SemiBoldItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-SemiBoldItalic.woff') format('woff'),
+		url('./fonts/Montserrat-SemiBoldItalic.ttf') format('truetype');
+	font-weight: 600;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-Regular.eot');
+	src: local('Montserrat Regular'), local('Montserrat-Regular'),
+		url('./fonts/Montserrat-Regular.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-Regular.woff') format('woff'),
+		url('./fonts/Montserrat-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-Medium.eot');
+	src: local('Montserrat Medium'), local('Montserrat-Medium'),
+		url('./fonts/Montserrat-Medium.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-Medium.woff') format('woff'),
+		url('./fonts/Montserrat-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-ExtraBold.eot');
+	src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
+		url('./fonts/Montserrat-ExtraBold.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-ExtraBold.woff') format('woff'),
+		url('./fonts/Montserrat-ExtraBold.ttf') format('truetype');
+	font-weight: 800;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-Black.eot');
+	src: local('Montserrat Black'), local('Montserrat-Black'),
+		url('./fonts/Montserrat-Black.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-Black.woff') format('woff'),
+		url('./fonts/Montserrat-Black.ttf') format('truetype');
+	font-weight: 900;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-ThinItalic.eot');
+	src: local('Montserrat Thin Italic'), local('Montserrat-ThinItalic'),
+		url('./fonts/Montserrat-ThinItalic.eot') format('embedded-opentype'),
+		url('./fonts/Montserrat-ThinItalic.woff') format('woff'),
+		url('./fonts/Montserrat-ThinItalic.ttf') format('truetype');
+	font-weight: 100;
+	font-style: italic;
+}
+
 body {
     margin: 0;
-    font-family: 'Proxima Nova',
-    sans-serif;
+    font-family: 'Montserrat';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: url("bg.png");
-    background-size: 100% 100%;
+    /* background: url("bg.png"); */
+    /* background-size: 100% 100%; */
 }
 
 code {
@@ -14,6 +211,14 @@ code {
 }
 
 #whole-app {
+}
+
+.candidateDetailsPage a, .candidateDetailsPage button, .candidateDetailsPage input, .candidateDetailsPage select,
+#whole-app a, #whole-app button, #whole-app input, #whole-app select {
+    font-family: 'Montserrat'!important;
+}
+#whole-app input::placeholder {
+    font-family: 'Montserrat'!important;
 }
 
 .filter-block {
@@ -46,7 +251,7 @@ code {
 .filter-control .MuiSelect-select {
     min-height: 18px;
     padding: 7px!important;
-    font-family: 'Proxima Nova', sans-serif;
+    font-family: 'Montserrat';
 }
 
 #grid-wrapper {
@@ -78,7 +283,8 @@ code {
 .cand-detail-block {
     /*flex-basis: 50%;*/
     width: 100%;
-    padding: 16px 16px 24px 0;
+    padding: 40px 16px 40px 0;
+    border-bottom: 1px solid #a1a1a1;
 }
 .cand-detail-block .elem {
     display: flex;
@@ -284,7 +490,7 @@ code {
     opacity: 0.6;
 }
 
-.seniority span {
+.seniority span, .country span, .relocate {
     color: #1A1A1C;
     font-size: 10px;
     line-height: 12px;
@@ -295,8 +501,6 @@ code {
     font-weight: 700;
 }
 
-.country span,
-.relocate,
 .experience {
     font-size: 16px;
     line-height: 19px;
@@ -343,7 +547,7 @@ code {
 }
 
 .ag-theme-alpine {
-    font-family: 'Proxima Nova', sans-serif;
+    font-family: 'Montserrat'!important;
 }
 
 .ag-center-cols-container {
@@ -395,19 +599,19 @@ code {
 }
 
 .elem-values .MuiChip-root {
-    font-family: 'Proxima Nova', sans-serif;
+    font-family: 'Montserrat';
     height: auto;
-    background: #E9EFF7;
-    border-radius: 4px!important;
-    margin: 2px;
+    background: white;
+    border-radius: 13px!important;
+    border: 1px solid black;
+    margin: 2px 6px;
 }
 .elem-values .MuiChip-root .MuiChip-label {
     font-size: 12px;
     line-height: 24px;
-    color: #2E81E6;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 0 6px;
+    color: black;
+    font-weight: 400;
+    padding: 0 12px;
 }
 
 .info {
@@ -433,7 +637,7 @@ code {
     background-color: white;
     border-radius: 14px;
     margin-top: 4px;
-    font-family: "Proxima Nova", sans-serif;
+    font-family: 'Montserrat';
     color: #1A1A1A;
 }
 
@@ -449,4 +653,7 @@ code {
 }
 .MuiAutocomplete-inputRoot[class*="MuiOutlinedInput-root"] {
     padding: 7px!important;
+}
+.MuiButton-contained {
+    box-shadow: none !important;
 }
